# ontomap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA.md  EVALUATION.md  FINETUNE.md  INSTALL.md  README.md  SETUP_ASSETS.md  pyproject.toml
.github/workflows/: ci.yml
data/: modelseed_corpus  modelseed_corpus_patches.csv
data/splits/: ko_A.json  ko_B.json  ko_C.json  ko_meta.json  sso_A.json  sso_B.json  sso_C.json  sso_meta.json
docs/: BENCHMARK.md  COMPOUND_REACTION_MAPPING.md  USAGE.md  VALIDATION.md
examples/: 01_text_input.py  02_ec_augment.py  03_batch_csv.py  04_varied_inputs.py  05_sqlite_output.py  06_map_published_model.py  README.md  quickstart.py  quickstart.sh  sample_ids.csv
ontomap/: __init__.py  _frozen_runtime.py  _paths.py  aggregate.py  bench.py  cli.py  cluster.py  confidence_v2.py  info.py  io.py  modelmap.py  pipeline.py  weights_fetch.py
ontomap/_helpers/: __init__.py  step17_evaluate.py  step18_medcpt.py
ontomap/_helpers/ontomap_lib/: __init__.py  bakta.py  data.py  embed.py  evaluate.py  expand.py  expand_ko.py  incomplete_gold_eval.py  multi_axis.py  rerank.py  sssom.py
scripts/: build_corpus.py  download_models.py  finetune_lora.py  link_lora_adapters.py  regen_embeddings.py  setup.sh  train_lora_from_splits.py
tests/: test_cluster.py  test_cluster_methods.py  test_cluster_scale.py  test_cluster_sqlite.py  test_ec_priority_unit.py  test_embeddings_cache_format.py  test_input_robustness.py  test_io_hardening.py  test_pipeline_map_api.py  test_smoke.py  test_sqlite_readme.py
weights/: LICENSES.md  MANIFEST.txt  README.md  swept_weights.json
weights/lora/ko/: lora_adapter  train_config.json  val_metrics.json
weights/lora/ko/lora_adapter/: adapter_config.json
weights/lora/sso/: lora_adapter  train_config.json  val_metrics.json
weights/lora/sso/lora_adapter/: adapter_config.json  tokenizer_config.json
